crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@96.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'wa:1A'::tsvector @@ '!w:*A'::tsquery as \"false\";"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..55
    AExpr@7..44
      TypeCast@7..24
        AConst@7..14
          Sconst@7..14 "'wa:1A'"
        Typecast@14..16 "::"
        TypeName@16..24
          Ident@16..24 "tsvector"
      Whitespace@24..25 " "
      Op@25..27 "@@"
      Whitespace@27..28 " "
      TypeCast@28..44
        AConst@28..35
          Sconst@28..35 "'!w:*A'"
        Typecast@35..37 "::"
        TypeName@37..44
          Ident@37..44 "tsquery"
    Whitespace@44..45 " "
    As@45..47 "as"
    Whitespace@47..48 " "
    Ident@48..55 "\"false\""
  Ascii59@55..56 ";"

