crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@99.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT strip('wa:1A'::tsvector) @@ 'w:*D'::tsquery as \"true\";"
---
SelectStmt@0..61
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..60
    AExpr@7..50
      FuncCall@7..30
        StripP@7..12 "strip"
        Ascii40@12..13 "("
        TypeCast@13..30
          AConst@13..20
            Sconst@13..20 "'wa:1A'"
          Typecast@20..22 "::"
          TypeName@22..30
            Ident@22..30 "tsvector"
      Ascii41@30..31 ")"
      Whitespace@31..32 " "
      Op@32..34 "@@"
      Whitespace@34..35 " "
      TypeCast@35..50
        AConst@35..41
          Sconst@35..41 "'w:*D'"
        Typecast@41..43 "::"
        TypeName@43..50
          Ident@43..50 "tsquery"
    Whitespace@50..51 " "
    As@51..53 "as"
    Whitespace@53..54 " "
    Ident@54..60 "\"true\""
  Ascii59@60..61 ";"

