crates/pg_syntax/tests/snapshots/postgres_regress/union@10.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT 1 AS two UNION SELECT 2.2 ORDER BY 1;
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..15
    ResTarget@7..15
      AConst@7..8
        Iconst@7..8 "1"
      Whitespace@8..9 " "
      As@9..11 "AS"
      Whitespace@11..12 " "
      Ident@12..15 "two"
  Whitespace@15..16 " "
  Union@16..21 "UNION"
  Whitespace@21..22 " "
  SelectStmt@22..32
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    ResTarget@29..32
      AConst@29..32
        Fconst@29..32 "2.2"
  Whitespace@32..33 " "
  SortBy@33..43
    Order@33..38 "ORDER"
    Whitespace@38..39 " "
    By@39..41 "BY"
    Whitespace@41..42 " "
    AConst@42..43
      Iconst@42..43 "1"
  Ascii59@43..44 ";"

