crates/pg_syntax/tests/snapshots/postgres_regress/union@101.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT q1 FROM int8_tbl INTERSECT (((SELECT q2 FROM int8_tbl UNION ALL SELECT q2 FROM int8_tbl))) ORDER BY 1;
---
SelectStmt@0..109
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..23
    ResTarget@7..9
      ColumnRef@7..9
        Ident@7..9 "q1"
    Whitespace@9..10 " "
    From@10..14 "FROM"
    Whitespace@14..15 " "
    RangeVar@15..23
      Ident@15..23 "int8_tbl"
  Whitespace@23..24 " "
  Intersect@24..33 "INTERSECT"
  Whitespace@33..34 " "
  Ascii40@34..35 "("
  Ascii40@35..36 "("
  Ascii40@36..37 "("
  SelectStmt@37..94
    Select@37..43 "SELECT"
    Whitespace@43..44 " "
    SelectStmt@44..60
      ResTarget@44..46
        ColumnRef@44..46
          Ident@44..46 "q2"
      Whitespace@46..47 " "
      From@47..51 "FROM"
      Whitespace@51..52 " "
      RangeVar@52..60
        Ident@52..60 "int8_tbl"
    Whitespace@60..61 " "
    Union@61..66 "UNION"
    Whitespace@66..67 " "
    All@67..70 "ALL"
    Whitespace@70..71 " "
    SelectStmt@71..94
      Select@71..77 "SELECT"
      Whitespace@77..78 " "
      ResTarget@78..80
        ColumnRef@78..80
          Ident@78..80 "q2"
      Whitespace@80..81 " "
      From@81..85 "FROM"
      Whitespace@85..86 " "
      RangeVar@86..94
        Ident@86..94 "int8_tbl"
  Ascii41@94..95 ")"
  Ascii41@95..96 ")"
  Ascii41@96..97 ")"
  Whitespace@97..98 " "
  SortBy@98..108
    Order@98..103 "ORDER"
    Whitespace@103..104 " "
    By@104..106 "BY"
    Whitespace@106..107 " "
    AConst@107..108
      Iconst@107..108 "1"
  Ascii59@108..109 ";"

