crates/pg_syntax/tests/snapshots/postgres_regress/union@103.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT q1 FROM int8_tbl UNION ALL SELECT q2 FROM int8_tbl EXCEPT SELECT q1 FROM int8_tbl ORDER BY 1;
---
SelectStmt@0..100
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..57
    SelectStmt@7..23
      ResTarget@7..9
        ColumnRef@7..9
          Ident@7..9 "q1"
      Whitespace@9..10 " "
      From@10..14 "FROM"
      Whitespace@14..15 " "
      RangeVar@15..23
        Ident@15..23 "int8_tbl"
    Whitespace@23..24 " "
    Union@24..29 "UNION"
    Whitespace@29..30 " "
    All@30..33 "ALL"
    Whitespace@33..34 " "
    Select@34..40 "SELECT"
    Whitespace@40..41 " "
    SelectStmt@41..57
      ResTarget@41..43
        ColumnRef@41..43
          Ident@41..43 "q2"
      Whitespace@43..44 " "
      From@44..48 "FROM"
      Whitespace@48..49 " "
      RangeVar@49..57
        Ident@49..57 "int8_tbl"
  Whitespace@57..58 " "
  Except@58..64 "EXCEPT"
  Whitespace@64..65 " "
  SelectStmt@65..88
    Select@65..71 "SELECT"
    Whitespace@71..72 " "
    ResTarget@72..74
      ColumnRef@72..74
        Ident@72..74 "q1"
    Whitespace@74..75 " "
    From@75..79 "FROM"
    Whitespace@79..80 " "
    RangeVar@80..88
      Ident@80..88 "int8_tbl"
  Whitespace@88..89 " "
  SortBy@89..99
    Order@89..94 "ORDER"
    Whitespace@94..95 " "
    By@95..97 "BY"
    Whitespace@97..98 " "
    AConst@98..99
      Iconst@98..99 "1"
  Ascii59@99..100 ";"

