crates/pg_syntax/tests/snapshots/postgres_regress/union@11.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 1 AS one UNION SELECT 1.0::float8 ORDER BY 1;"
---
SelectStmt@0..52
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  SelectStmt@7..15
    ResTarget@7..15
      AConst@7..8
        Iconst@7..8 "1"
      Whitespace@8..9 " "
      As@9..11 "AS"
      Whitespace@11..12 " "
      Ident@12..15 "one"
  Whitespace@15..16 " "
  Union@16..21 "UNION"
  Whitespace@21..22 " "
  SelectStmt@22..40
    Select@22..28 "SELECT"
    Whitespace@28..29 " "
    ResTarget@29..40
      TypeCast@29..40
        AConst@29..32
          Fconst@29..32 "1.0"
        Typecast@32..34 "::"
        TypeName@34..40
          Ident@34..40 "float8"
  Whitespace@40..41 " "
  SortBy@41..51
    Order@41..46 "ORDER"
    Whitespace@46..47 " "
    By@47..49 "BY"
    Whitespace@49..50 " "
    AConst@50..51
      Iconst@50..51 "1"
  Ascii59@51..52 ";"

