crates/pg_syntax/tests/snapshots/postgres_regress/union@111.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: select intersect select;
---
SelectStmt@0..24
  Select@0..6 "select"
  Whitespace@6..7 " "
  Intersect@7..16 "intersect"
  Whitespace@16..17 " "
  SelectStmt@17..23
    Select@17..23 "select"
  Ascii59@23..24 ";"

