crates/pg_syntax/tests/snapshots/postgres_regress/union@118.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select from generate_series(1,5) union all select from generate_series(1,3);"
---
SelectStmt@0..76
  Select@0..6 "select"
  Whitespace@6..7 " "
  SelectStmt@7..31
    From@7..11 "from"
    Whitespace@11..12 " "
    RangeFunction@12..31
      List@12..31
        FuncCall@12..31
          Ident@12..27 "generate_series"
          Ascii40@27..28 "("
          AConst@28..29
            Iconst@28..29 "1"
          Ascii44@29..30 ","
          AConst@30..31
            Iconst@30..31 "5"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  Union@33..38 "union"
  Whitespace@38..39 " "
  All@39..42 "all"
  Whitespace@42..43 " "
  SelectStmt@43..74
    Select@43..49 "select"
    Whitespace@49..50 " "
    From@50..54 "from"
    Whitespace@54..55 " "
    RangeFunction@55..74
      List@55..74
        FuncCall@55..74
          Ident@55..70 "generate_series"
          Ascii40@70..71 "("
          AConst@71..72
            Iconst@71..72 "1"
          Ascii44@72..73 ","
          AConst@73..74
            Iconst@73..74 "3"
  Ascii41@74..75 ")"
  Ascii59@75..76 ";"

